Added credits and updated README